[gd_scene load_steps=5 format=1]

[ext_resource path="res://src/world/gameover.gd" type="Script" id=1]
[ext_resource path="res://art/fonts/exo2.fnt" type="BitmapFont" id=2]

[sub_resource type="Animation" id=1]

resource/name = "show"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("caption/caption_label:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -139, -28 ), Vector2( -557, -106 ), Vector2( -420, -87 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("caption/caption_label:rect/size")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 267, 63 ), Vector2( 267, 63 ), Vector2( 267, 63 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("caption/caption_label:rect/scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 4, 4 ), Vector2( 3, 3 ) ]
}

[sub_resource type="Animation" id=2]

resource/name = "show"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rank:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[node name="gameover" type="Node2D"]

script/script = ExtResource( 1 )

[node name="animator" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/show = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = true

[node name="caption" type="Node2D" parent="."]

[node name="caption_label" type="Label" parent="caption"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -420.0
margin/top = -87.0
margin/right = -153.0
margin/bottom = -24.0
custom_fonts/font = ExtResource( 2 )
text = "GAME OVER"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="rank" type="Node2D" parent="."]

transform/pos = Vector2( 0, 260 )
transform/scale = Vector2( 0.1, 0.1 )

[node name="rank_label" type="Label" parent="rank"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -420.0
margin/top = -87.0
margin/right = -153.0
margin/bottom = -24.0
custom_fonts/font = ExtResource( 2 )
text = "1st"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score" type="Node2D" parent="."]

editor/display_folded = true

[node name="score_label" type="Label" parent="score"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -415.0
margin/top = 143.0
margin/right = -148.0
margin/bottom = 206.0
custom_fonts/font = ExtResource( 2 )
text = "123456"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="rankanim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/show = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="finished" from="animator" to="." method="_on_animator_finished"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


